--- a/css/boeken.css
+++ b/css/boeken.css
@@ -84,3 +84,26 @@ body {
     background-color: aquamarine;
   }
 }
+
+#getForm {
+  display: none;
+}
+
+#getForm:checked ~ .order-form {
+  transform: translateX(0vw);
+}
+
+.order-form {
+  background-color: whitesmoke;
+  position: absolute;
+  width: 90vw;
+  min-height: 90vh;
+  top: 0em;
+  border-radius: 2em;
+  border: solid grey 2px;
+  padding: 2em;
+  box-sizing: border-box;
+  margin: 4vh 4vw;
+  transform: translateX(100vw);
+  transition: transform 1s ease-out;
+}
